--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
             style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
             Things to Watch!</h1>
 
-        <a href="stuff.html" class="waves-effect cyan darken-1 waves-light btn">
+        <a href="/stuff" class="waves-effect cyan darken-1 waves-light btn">
             Go to List!
             <i class="large material-icons right">mood</i>
         </a>
