--- a/views/item.html
+++ b/views/item.html
@@ -40,7 +40,7 @@
                 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
                 Details!</h1>
 
-            <a href="stuff.html" class="waves-effect cyan darken-1 waves-light btn">
+            <a href="/stuff" class="waves-effect cyan darken-1 waves-light btn">
                 Go Back!
                 <i class="large material-icons left">chevron_left</i>
             </a>
