--- a/views/stuff.html
+++ b/views/stuff.html
@@ -37,7 +37,7 @@
       style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
       Watch List!</h1>
 
-    <a href="index.html" class="waves-effect cyan darken-1 waves-light btn">
+    <a href="/" class="waves-effect cyan darken-1 waves-light btn">
       Go Back
       <i class="large material-icons left">chevron_left</i>
     </a>
@@ -153,7 +153,7 @@
             <td><i class="material-icons green-text">check</i></td>
             <td>10/10</td>
             <td class="right">
-              <a href="item.html" class="waves-effect cyan darken-1 waves-light btn">
+              <a href="/stuff/item" class="waves-effect cyan darken-1 waves-light btn">
                 <i class="material-icons">edit</i></a>
               <a class="waves-effect pink lighten-1 waves-light btn">
                 <i class="material-icons">delete</i></a>
@@ -166,7 +166,7 @@
             <td><i class="material-icons green-text">check</i></td>
             <td>10/10</td>
             <td class="right">
-              <a href="item.html" class="waves-effect cyan darken-1 waves-light btn">
+              <a href="/stuff/item" class="waves-effect cyan darken-1 waves-light btn">
                 <i class="material-icons">edit</i></a>
               <a class="waves-effect pink lighten-1 waves-light btn">
                 <i class="material-icons">delete</i></a>
