added stylesheet and icon

--- a/views/item.html
+++ b/views/item.html
@@ -11,22 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <style>
-        .btn {
-            font-family: monospace
-        }
-
-        .modal {
-            border: solid 4px #f8bbd0;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        table {
-            border: solid 2px #6a1b9a;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="/stylesheets/stuffStyle.css">
 
 </head>
 
